--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -161,10 +161,10 @@
    "outputs": [],
    "source": [
     "example_blobs_sdata = ln.Artifact.get(key=\"example_blobs.zarr\")\n",
+    "local_zarr_path = blobs_af.cache()  # returns a local path to the cached .zarr store\n",
     "example_blobs_sdata = (\n",
-    "    blobs_af.load()\n",
-    ")  # calls sd.read_zarr() on a locally cached .zarr store\n",
-    "example_blobs_sdata"
+    "    blobs_af.load()  # calls sd.read_zarr() on a locally cached .zarr store\n",
+    ")"
    ]
   },
   {
