--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -18,23 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).\n",
-    "Please refer to our SpatialData {doc}`docs:vitessce` guide to learn how to create Vitessce configs for SpatialData objects."
+    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).  Please refer to our [Transform](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI0002) to learn how to create Vitessce configs for SpatialData objects.\n",
+    "\n",
+    "Here, we visualize this [Xenium](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G) SpatialData object:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# clean up test instance\n",
-    "!rm -rf test-spatial\n",
-    "!lamin delete --force test-spatial"
+    "![Vitessce screenshot](images/vitessce_screenshot.png)"
    ]
   }
  ],
@@ -42,7 +35,7 @@
   "kernelspec": {
    "display_name": "lamindb",
    "language": "python",
-   "name": "python3"
+   "name": "lamindb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -54,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   },
   "nbproject": {
    "dependency": null,
