🔥 Remove the image and link to Artifact of the image instead

--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Vitessce screenshot](images/vitessce_screenshot.png)"
+    "<img src=\"https://lamin-site-assets.s3.amazonaws.com/.lamindb/3QN5qimmfQ4CELoh0000.png\" width=\"900px\">"
    ]
   }
  ],
