♻️ Add instance clean up code

--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -29,6 +29,20 @@
    "source": [
     "<img src=\"https://lamin-site-assets.s3.amazonaws.com/.lamindb/3QN5qimmfQ4CELoh0000.png\" width=\"900px\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean up test instance\n",
+    "!rm -rf test-spatial\n",
+    "!lamin delete --force test-spatial"
+   ],
+   "tags": [
+    "hide-cell"
+   ]
   }
  ],
  "metadata": {
