✨ Added a Vitessce screenshot to the spatial guide (#192)

--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -18,23 +18,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).\n",
-    "Please refer to our SpatialData {doc}`docs:vitessce` guide to learn how to create Vitessce configs for SpatialData objects."
+    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).  Please refer to our [Transform](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI0005) to learn how to create Vitessce configs for SpatialData objects.\n",
+    "\n",
+    "Here, we visualize this [Xenium](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G) SpatialData object:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://lamin-site-assets.s3.amazonaws.com/.lamindb/3QN5qimmfQ4CELoh0000.png\" width=\"900px\">"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# clean up test instance\n",
     "!rm -rf test-spatial\n",
     "!lamin delete --force test-spatial"
+   ],
+   "tags": [
+    "hide-cell"
    ]
   }
  ],
