--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -32,8 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./analysis-flow --modules bionty"
+    "# pip install 'lamindb[jupyter,bionty]'\n",
+    "!lamin init --storage ./test-analysis-flow --modules bionty"
    ]
   },
   {
@@ -103,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "ln.track(\"eNef4Arw8nNM0000\")"
+    "ln.track(\"eNef4Arw8nNM\")"
    ]
   },
   {
@@ -330,6 +330,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "artifact.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"--> What is the lineage of this artifact?\\n\")\n",
     "artifact.view_lineage()\n",
     "\n",
@@ -367,7 +376,7 @@
    "items": {}
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.8"
   },
   "nbproject": {
    "id": "eNef4Arw8nNM",
