♻️ Rename components to slots

--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -192,7 +192,7 @@
     "mudata_schema = ln.Schema(\n",
     "    name=\"mudata_papalexi21_subset_mudata_schema\",\n",
     "    otype=\"MuData\",\n",
-    "    components={\n",
+    "    slots={\n",
     "        \"obs\": obs_schema,\n",
     "        \"rna:obs\": obs_schema_rna,\n",
     "        \"hto:obs\": obs_schema_hto,\n",
