--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -382,7 +382,7 @@
     "h5sc_schema = ln.Schema(\n",
     "    name=\"single-cell image dataset\",\n",
     "    otype=\"AnnData\",\n",
-    "    components={\"var\": var_schema, \"obs\": obs_schema, \"uns\": uns_schema},\n",
+    "    slots={\"var\": var_schema, \"obs\": obs_schema, \"uns\": uns_schema},\n",
     ").save()\n",
     "\n",
     "# curate an AnnData\n",
