--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -274,7 +274,7 @@
     "spatial_schema = ln.Schema(\n",
     "    name=\"Spatial schema\",\n",
     "    otype=\"SpatialData\",\n",
-    "    components={\n",
+    "    slots={\n",
     "        \"sample\": spatial_sample_schema,\n",
     "        \"table:obs\": spatial_obs_schema,\n",
     "        \"table:var\": spatial_var_schema,\n",
