♻️ Transpose in scportrait schema

--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -356,11 +356,10 @@
    "outputs": [],
    "source": [
     "# define var schema\n",
-    "var_schema = ln.Schema(\n",
+    "varT_schema = ln.Schema(\n",
     "    name=\"single-cell image dataset schema var\",\n",
     "    description=\"column schema for data measured in obsm[single_cell_images]\",\n",
     "    itype=ln.Feature,\n",
-    "    dtype=float,\n",
     ").save()\n",
     "\n",
     "# define obs schema\n",
@@ -382,7 +381,7 @@
     "h5sc_schema = ln.Schema(\n",
     "    name=\"single-cell image dataset\",\n",
     "    otype=\"AnnData\",\n",
-    "    slots={\"var\": var_schema, \"obs\": obs_schema, \"uns\": uns_schema},\n",
+    "    slots={\"var.T\": varT_schema, \"obs\": obs_schema, \"uns\": uns_schema},\n",
     ").save()\n",
     "\n",
     "# curate an AnnData\n",
