♻️ Refactor spatialdata guide

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -157,7 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "example_blobs_sdata = ln.Artifact.get(key=\"example_blobs.zarr\")\n",
@@ -187,16 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validating annotations"
+    "## Curating artifacts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image dataset.\n",
-    "\n",
-    "More details can be found in the [ingestion notebook](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
+    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image datasets that were ingested in raw form [here](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
    ]
   },
   {
@@ -235,49 +237,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# define sample schema\n",
-    "spatial_sample_schema = ln.Schema(\n",
-    "    name=\"Spatial sample level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
-    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
-    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
-    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
-    ").save()\n",
+    "# define features\n",
+    "ln.Feature(name=\"organism\", dtype=bt.Organism).save()\n",
+    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
+    "ln.Feature(name=\"disease\", dtype=bt.Disease).save()\n",
+    "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
+    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True)\n",
     "\n",
-    "# define table obs schema\n",
-    "spatial_obs_schema = ln.Schema(\n",
-    "    name=\"Spatial obs level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True)\n",
-    "        .save()\n",
-    "        .with_config(optional=True),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
+    "# define simple schemas\n",
+    "flexible_metadata_schema = ln.Schema(\n",
+    "    name=\"Flexible metadata\", itype=ln.Feature, coerce_dtype=True\n",
     ").save()\n",
-    "\n",
-    "# define table var schema\n",
-    "spatial_var_schema = ln.Schema(\n",
-    "    name=\"Spatial var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
+    "ensembl_gene_ids = ln.Schema(\n",
+    "    name=\"Spatial var level (Ensembl gene id)\", itype=bt.Gene.ensembl_gene_id\n",
     ").save()\n",
     "\n",
     "# define composite schema\n",
     "spatial_schema = ln.Schema(\n",
-    "    name=\"Spatial schema\",\n",
+    "    name=\"Spatialdata schema (flexible)\",\n",
     "    otype=\"SpatialData\",\n",
     "    slots={\n",
-    "        \"sample\": spatial_sample_schema,\n",
-    "        \"table:obs\": spatial_obs_schema,\n",
-    "        \"table:var\": spatial_var_schema,\n",
+    "        \"attrs:sample\": flexible_metadata_schema,\n",
+    "        \"tables:table:obs\": flexible_metadata_schema,\n",
+    "        \"tables:table:var.T\": ensembl_gene_ids,\n",
     "    },\n",
     ").save()"
    ]
@@ -328,6 +313,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenium_aligned_1_sdata.tables[\"table\"].obs[\"celltype_major\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -352,35 +346,6 @@
     "        }\n",
     "    )\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "xenium_curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
    ]
   },
   {
