--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -245,7 +245,7 @@
     "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
     "ln.Feature(name=\"disease\", dtype=bt.Disease).save()\n",
     "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
-    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True)\n",
+    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save()\n",
     "\n",
     "# define simple schemas\n",
     "flexible_metadata_schema = ln.Schema(\n",
@@ -306,8 +306,8 @@
     "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatial_schema)\n",
     "try:\n",
     "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
+    "except ln.errors.ValidationError:\n",
+    "    pass"
    ]
   },
   {
@@ -346,6 +346,15 @@
     "        }\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenium_curator.slots[\"tables:table:obs\"].cat.add_new_from(\"celltype_major\")"
    ]
   },
   {
