--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -100,7 +100,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "spatial_guide_datasets = ln.Project(name=\"spatial guide datasets\").save()\n",
-    "ln.track(project=spatial_guide_datasets.name)"
+    "ln.track(project=spatial_guide_datasets)"
    ]
   },
   {
@@ -181,7 +181,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "blobs_af.view_lineage()"
@@ -306,17 +310,8 @@
     "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatial_schema)\n",
     "try:\n",
     "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xenium_aligned_1_sdata.tables[\"table\"].obs[\"celltype_major\"]"
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
@@ -346,6 +341,22 @@
     "        }\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    xenium_curator.validate()\n",
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
@@ -442,23 +453,6 @@
    },
    "outputs": [],
    "source": [
-    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_2_sdata, spatial_schema)\n",
-    "try:\n",
-    "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
     "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
    ]
   },
@@ -504,33 +498,9 @@
    },
    "outputs": [],
    "source": [
-    "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, spatial_schema)\n",
-    "try:\n",
-    "    visium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visium_curator.slots[\"table:var\"].cat.add_new_from(\"columns\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "visium_curated_af = visium_curator.save_artifact(key=\"visium.zarr\")"
+    "visium_curated_af = ln.Artifact.from_spatialdata(\n",
+    "    visium_aligned_sdata, key=\"visium.zarr\", schema=spatial_schema\n",
+    ").save()"
    ]
   },
   {
