--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -453,7 +453,22 @@
    },
    "outputs": [],
    "source": [
-    "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
+    "xenium_2_curated_af = ln.Artifact.from_spatialdata(\n",
+    "    xenium_aligned_2_sdata, key=\"xenium2.zarr\", schema=spatial_schema\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_2_curated_af.describe()"
    ]
   },
   {
