--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -47,14 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query a SpatialData Collection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### By provenance metadata"
+    "## Query by data lineage"
    ]
   },
   {
@@ -82,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the artifact:"
+    "Query the artifacts:"
    ]
   },
   {
@@ -102,15 +95,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## By biological metadata"
+    "## Query by biological metadata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spatial data stored in SpatialData format and curated with the {class}`~lamindb.curators.SpatialDataCurator` can easily be queried by the annotated features and labels.\n",
-    "Although, we curated specific slots of SpatialData Artifacts, the labels are attached directly to the Artifact:"
+    "Query all visium datasets."
    ]
   },
   {
@@ -123,20 +115,8 @@
    },
    "outputs": [],
    "source": [
-    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
-    "\n",
-    "# 10x xenium has a ln_ prefix because Python does not support numbers as attributes\n",
-    "all_xenium_data = ln.Artifact.filter(\n",
-    "    experimental_factors__name=experimental_factors.ln_10x_xenium\n",
-    ")\n",
+    "all_xenium_data = ln.Artifact.filter(experimental_factors__name=\"10x Xenium\")\n",
     "all_xenium_data.df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Inspect artifact metadata"
    ]
   },
   {
@@ -157,7 +137,8 @@
    "outputs": [],
    "source": [
     "# Only returns the Xenium datasets as the Visium dataset did not have annotated cell types\n",
-    "query_set = ln.Artifact.filter(feature_sets__features__name=\"celltype_major\").all()\n",
+    "feature_cell_type_major = ln.Feature.get(name=\"celltype_major\")\n",
+    "query_set = ln.Artifact.filter(feature_sets__features=feature_cell_type_major).all()\n",
     "xenium_1_af, xenium_2_af = query_set[0], query_set[1]"
    ]
   },
@@ -420,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
