📝 Polish spatial guide

--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -70,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xenium_1_sd = ln.Artifact.filter(key=\"xenium_aligned_1_guide_min.zarr\").one().load()\n",
-    "visium_sd = ln.Artifact.filter(key=\"visium_aligned_guide_min.zarr\").one().load()"
+    "xenium_1_sd = ln.Artifact.get(key=\"xenium_aligned_1_guide_min.zarr\").load()\n",
+    "visium_sd = ln.Artifact.get(key=\"visium_aligned_guide_min.zarr\").load()"
    ]
   },
   {
