--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -22,9 +22,7 @@
     "\n",
     "Here is [a guide](https://docs.lamin.ai/vitessce) for visualizing spatial data with Vitessce.\n",
     "\n",
-    "Here is a [notebook](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI) that ran on the visium dataset discussed on the previous pages.\n",
-    "\n",
-    "Here, we visualize this [Xenium](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G) SpatialData object:"
+    "Here is a [notebook](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI) that ran on the visium dataset discussed on the previous pages and added the Vitessce visualiation to [this dataset](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G)."
    ]
   },
   {
