--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -100,7 +100,7 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "spatial_guide_datasets = ln.Project(name=\"spatial guide datasets\").save()\n",
-    "ln.track(project=spatial_guide_datasets.name)"
+    "ln.track(project=spatial_guide_datasets)"
    ]
   },
   {
@@ -157,7 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "example_blobs_sdata = ln.Artifact.get(key=\"example_blobs.zarr\")\n",
@@ -177,7 +181,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "blobs_af.view_lineage()"
@@ -187,16 +195,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validating annotations"
+    "## Curating artifacts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image dataset.\n",
-    "\n",
-    "More details can be found in the [ingestion notebook](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
+    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image datasets that were ingested in raw form [here](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
    ]
   },
   {
@@ -235,49 +241,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# define sample schema\n",
-    "spatial_sample_schema = ln.Schema(\n",
-    "    name=\"Spatial sample level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
-    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
-    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
-    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
-    ").save()\n",
+    "# define features\n",
+    "ln.Feature(name=\"organism\", dtype=bt.Organism).save()\n",
+    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
+    "ln.Feature(name=\"disease\", dtype=bt.Disease).save()\n",
+    "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
+    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save()\n",
     "\n",
-    "# define table obs schema\n",
-    "spatial_obs_schema = ln.Schema(\n",
-    "    name=\"Spatial obs level\",\n",
-    "    features=[\n",
-    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True)\n",
-    "        .save()\n",
-    "        .with_config(optional=True),\n",
-    "    ],\n",
-    "    coerce_dtype=True,\n",
+    "# define simple schemas\n",
+    "flexible_metadata_schema = ln.Schema(\n",
+    "    name=\"Flexible metadata\", itype=ln.Feature, coerce_dtype=True\n",
     ").save()\n",
-    "\n",
-    "# define table var schema\n",
-    "spatial_var_schema = ln.Schema(\n",
-    "    name=\"Spatial var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
+    "ensembl_gene_ids = ln.Schema(\n",
+    "    name=\"Spatial var level (Ensembl gene id)\", itype=bt.Gene.ensembl_gene_id\n",
     ").save()\n",
     "\n",
     "# define composite schema\n",
     "spatial_schema = ln.Schema(\n",
-    "    name=\"Spatial schema\",\n",
+    "    name=\"Spatialdata schema (flexible)\",\n",
     "    otype=\"SpatialData\",\n",
     "    slots={\n",
-    "        \"sample\": spatial_sample_schema,\n",
-    "        \"table:obs\": spatial_obs_schema,\n",
-    "        \"table:var\": spatial_var_schema,\n",
+    "        \"attrs:sample\": flexible_metadata_schema,\n",
+    "        \"tables:table:obs\": flexible_metadata_schema,\n",
+    "        \"tables:table:var.T\": ensembl_gene_ids,\n",
     "    },\n",
     ").save()"
    ]
@@ -321,8 +310,8 @@
     "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatial_schema)\n",
     "try:\n",
     "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
@@ -366,21 +355,17 @@
    "source": [
     "try:\n",
     "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "xenium_curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
+    "xenium_curator.slots[\"tables:table:obs\"].cat.add_new_from(\"celltype_major\")"
    ]
   },
   {
@@ -468,11 +453,9 @@
    },
    "outputs": [],
    "source": [
-    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_2_sdata, spatial_schema)\n",
-    "try:\n",
-    "    xenium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
+    "xenium_2_curated_af = ln.Artifact.from_spatialdata(\n",
+    "    xenium_aligned_2_sdata, key=\"xenium2.zarr\", schema=spatial_schema\n",
+    ").save()"
    ]
   },
   {
@@ -485,7 +468,7 @@
    },
    "outputs": [],
    "source": [
-    "xenium_2_curated_af = xenium_curator.save_artifact(key=\"xenium2.zarr\")"
+    "xenium_2_curated_af.describe()"
    ]
   },
   {
@@ -530,33 +513,9 @@
    },
    "outputs": [],
    "source": [
-    "visium_curator = ln.curators.SpatialDataCurator(visium_aligned_sdata, spatial_schema)\n",
-    "try:\n",
-    "    visium_curator.validate()\n",
-    "except ln.errors.ValidationError as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visium_curator.slots[\"table:var\"].cat.add_new_from(\"columns\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "visium_curated_af = visium_curator.save_artifact(key=\"visium.zarr\")"
+    "visium_curated_af = ln.Artifact.from_spatialdata(\n",
+    "    visium_aligned_sdata, key=\"visium.zarr\", schema=spatial_schema\n",
+    ").save()"
    ]
   },
   {
