--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -18,9 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).  Please refer to our [Transform](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI0005) to learn how to create Vitessce configs for SpatialData objects.\n",
+    "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).  \n",
     "\n",
-    "Here, we visualize this [Xenium](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G) SpatialData object:"
+    "Here is [a guide](https://docs.lamin.ai/vitessce) for visualizing spatial data with Vitessce.\n",
+    "\n",
+    "Here is a [notebook](https://lamin.ai/laminlabs/lamindata/transform/O3BqO4LsJmxI) that ran on the visium dataset discussed on the previous pages and added the Vitessce visualiation to [this dataset](https://lamin.ai/laminlabs/lamindata/artifact/kVMuYil81BHTwQ9G)."
    ]
   },
   {
@@ -39,9 +41,6 @@
     "# clean up test instance\n",
     "!rm -rf test-spatial\n",
     "!lamin delete --force test-spatial"
-   ],
-   "tags": [
-    "hide-cell"
    ]
   }
  ],
