--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -381,7 +381,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
