--- a/docs/sc-imaging2.ipynb
+++ b/docs/sc-imaging2.ipynb
@@ -101,9 +101,9 @@
     ")\n",
     "display(select_artifacts_df.head())\n",
     "\n",
-    "conditions = list(set.union(*select_artifacts_df[\"stimulation\"].values))\n",
-    "cell_line_clones = list(set.union(*select_artifacts_df[\"cell_line_clone\"].values))\n",
-    "FOVs = list(set.union(*select_artifacts_df[\"FOV\"].values))"
+    "conditions = list(set(select_artifacts_df[\"stimulation\"].values))\n",
+    "cell_line_clones = list(set(select_artifacts_df[\"cell_line_clone\"].values))\n",
+    "FOVs = list(set(select_artifacts_df[\"FOV\"].values))"
    ]
   },
   {
@@ -603,7 +603,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
