--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -69,19 +69,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "disease_ontology = bt.Disease.add_source(source=\"mondo\", version=\"2023-04-04\")\n",
+    "disease_ontology.currently_used = True\n",
+    "disease_ontology.save()\n",
+    "\n",
+    "developmental_stage_ontology = bt.DevelopmentalStage.add_source(\n",
+    "    source=\"hsapdv\", version=\"2020-03-10\"\n",
+    ")\n",
+    "developmental_stage_ontology.currently_used = True\n",
+    "developmental_stage_ontology.save()\n",
+    "\n",
     "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
-    "disease_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.Disease\", name=\"mondo\", version=\"2023-04-04\"\n",
+    "phenotype_ontology = bt.Phenotype.add_source(\n",
+    "    source=\"hp\", version=\"2023-06-17\", organism=\"human\"\n",
     ")\n",
-    "developmental_stage_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", version=\"2020-03-10\"\n",
-    ")\n",
-    "phenotype_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.Phenotype\",\n",
-    "    name=\"hp\",\n",
-    "    version=\"2023-06-17\",\n",
-    "    organism=\"human\",\n",
-    ")"
+    "phenotype_ontology.currently_used = True"
    ]
   },
   {
