--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -73,11 +73,9 @@
     "disease_ontology.currently_used = True\n",
     "disease_ontology.save()\n",
     "\n",
-    "developmental_stage_ontology = bt.DevelopmentalStage.add_source(\n",
-    "    source=\"hsapdv\", version=\"2020-03-10\"\n",
+    "developmental_stage_ontology = bt.Source.get(\n",
+    "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", currently_used=True\n",
     ")\n",
-    "developmental_stage_ontology.currently_used = True\n",
-    "developmental_stage_ontology.save()\n",
     "\n",
     "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
     "phenotype_ontology = bt.Phenotype.add_source(\n",
