--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -70,8 +70,6 @@
    "outputs": [],
    "source": [
     "disease_ontology = bt.Disease.add_source(source=\"mondo\", version=\"2023-04-04\")\n",
-    "disease_ontology.currently_used = True\n",
-    "disease_ontology.save()\n",
     "\n",
     "developmental_stage_ontology = bt.Source.get(\n",
     "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", currently_used=True\n",
@@ -81,7 +79,8 @@
     "phenotype_ontology = bt.Phenotype.add_source(\n",
     "    source=\"hp\", version=\"2023-06-17\", organism=\"human\"\n",
     ")\n",
-    "phenotype_ontology.currently_used = True"
+    "phenotype_ontology.currently_used = True\n",
+    "phenotype_ontology.save()"
    ]
   },
   {
