--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -28,20 +28,6 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[bionty]'\n",
-    "!lamin init --storage ./test-ehrschema --modules bionty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import pandas as pd\n",
@@ -69,18 +55,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "disease_ontology = bt.Disease.add_source(source=\"mondo\", version=\"2023-04-04\")\n",
+    "disease_ontology = bt.Source.get(\n",
+    "    entity=\"bionty.Disease\", name=\"mondo\", currently_used=True\n",
+    ")\n",
     "\n",
     "developmental_stage_ontology = bt.Source.get(\n",
     "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", currently_used=True\n",
     ")\n",
     "\n",
     "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
-    "phenotype_ontology = bt.Phenotype.add_source(\n",
-    "    source=\"hp\", version=\"2023-06-17\", organism=\"human\"\n",
-    ")\n",
-    "phenotype_ontology.currently_used = True\n",
-    "phenotype_ontology.save()"
+    "phenotype_ontology = bt.Source.get(\n",
+    "    entity=\"bionty.Phenotype\", name=\"hp\", currently_used=True\n",
+    ")"
    ]
   },
   {
@@ -327,7 +313,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
