--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -28,6 +28,20 @@
    },
    "outputs": [],
    "source": [
+    "# pip install 'lamindb[bionty]'\n",
+    "!lamin init --storage ./test-ehrschema --modules bionty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import pandas as pd\n",
