--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -69,18 +69,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
     "disease_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.Disease\", name=\"mondo\", version=\"2023-04-04\"\n",
+    "    entity=\"bionty.Disease\", name=\"mondo\", currently_used=True\n",
     ")\n",
+    "\n",
     "developmental_stage_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", version=\"2020-03-10\"\n",
+    "    entity=\"bionty.DevelopmentalStage\", name=\"hsapdv\", currently_used=True\n",
     ")\n",
+    "\n",
+    "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
     "phenotype_ontology = bt.Source.get(\n",
-    "    entity=\"bionty.Phenotype\",\n",
-    "    name=\"hp\",\n",
-    "    version=\"2023-06-17\",\n",
-    "    organism=\"human\",\n",
+    "    entity=\"bionty.Phenotype\", name=\"hp\", currently_used=True\n",
     ")"
    ]
   },
@@ -328,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py312",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -342,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
