📝 Update sc-imaging notebook: fix links, enhance clarity

--- a/docs/sc-imaging.ipynb
+++ b/docs/sc-imaging.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "![imaging1/4](https://img.shields.io/badge/imaging1/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/imaging.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/sc-imaging.ipynb)"
    ]
   },
   {
@@ -24,9 +24,9 @@
    "source": [
     "Here, you will learn how to structure, featurize, and make a large imaging collection queryable for large-scale machine learning:\n",
     "\n",
-    "1. Load and annotate a {class}`~lamindb.Collection` of microscopy images (![sc-imaging/4](https://img.shields.io/badge/imaging1/4-lightgrey))\n",
-    "2. Generate single-cell images ([![sc-imaging2/4](https://img.shields.io/badge/imaging2/4-lightgrey)](/sc-imaging4))\n",
-    "3. Featurize single-cell images ([![sc-imaging3/4](https://img.shields.io/badge/imaging3/6-lightgrey)](/sc-imaging4))\n",
+    "1. Load and annotate a {class}`~lamindb.Collection` of microscopy images ([![sc-imaging1/4](https://img.shields.io/badge/imaging1/4-lightgrey)](/sc-imaging))\n",
+    "2. Generate single-cell images ([![sc-imaging2/4](https://img.shields.io/badge/imaging2/4-lightgrey)](/sc-imaging2))\n",
+    "3. Featurize single-cell images ([![sc-imaging3/4](https://img.shields.io/badge/imaging3/4-lightgrey)](/sc-imaging3))\n",
     "4. Train model to identify autophagy positive cells ([![sc-imaging4/4](https://img.shields.io/badge/imaging4/4-lightgrey)](/sc-imaging4))\n",
     "\n",
     "\n",
@@ -45,9 +45,10 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "First, we load and annotate a collection of microscopy images in TIFF format that [was previously uploaded](https://lamin.ai/scportrait/examples/transform/asoq6WyPequ8?).\n",
+    "First, we load and annotate a collection of microscopy images in TIFF format that [was previously uploaded](https://lamin.ai/scportrait/examples/transform/fl9HcsEgLIr70000).\n",
     "\n",
-    "The images used here were acquired as part of a [study](https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1&ved=2ahUKEwj3m56hs52LAxWxRfEDHQZwKZ8QFnoECBIQAQ&usg=AOvVaw04HsGDIPcIPr1ldblXuh0Z) on autophagy, a cellular process during which cells recycle their components in autophagosomes. The study tracked genetic determinants of autophagy through fluorescence microscopy of human U2OS cells."
+    "The images used here were acquired as part of a [study](https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1) on autophagy, a cellular process during which cells recycle their components in autophagosomes. \n",
+    "The study tracked genetic determinants of autophagy through fluorescence microscopy of human U2OS cells."
    ]
   },
   {
@@ -131,26 +132,58 @@
    "id": "9",
    "metadata": {},
    "source": [
-    "All images are of the same cell line (U2OS), which have been imaged on an Opera Phenix microscope at 20X magnification.\n",
-    "To induce autophagy, the cells have either been treated with `Torin-1`, a small molecule that mimics starvation, for 14 hours, or left untreated as a control.\n",
+    "## Curating artifacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8074b756",
+   "metadata": {},
+   "source": [
+    "All images feature the U2OS cell line, captured using an Opera Phenix microscope at 20X magnification.\n",
     "\n",
-    "To visualize the process of autophagosome formation, the U2OS cells have been genetically engineered to express fluorescently tagged proteins.\n",
-    "`LC3B` is a  marker of autophagosomes, allowing us to visualize their formation in the mCherry channel.\n",
-    "`LckLip` is a membrane-targeted fluorescent protein, which helps outline the cellular boundaries of individual cells in the `Alexa488` channel.\n",
-    "Furthermore, the cells’ DNA was stained using `Hoechst`, which we can visualize in the `DAPI` channel to identify the nuclei of individual cells.\n",
+    "To induce autophagy, cells were treated under two conditions:\n",
+    "- Treated: Exposed to `Torin-1` (a starvation-mimicking small molecule) for 14 hours\n",
+    "- Control: Left untreated\n",
     "\n",
-    "These three structures are visualized in three separate image channels:\n",
+    "The U2OS cells were genetically engineered with fluorescently tagged proteins to visualize the process of autophagosome formation:\n",
     "\n",
-    "| Channel | Imaged Structure   |\n",
-    "|---------|--------------------|\n",
-    "| 1       | DNA                |\n",
-    "| 2       | Autophagosomes     |\n",
-    "| 3       | Plasma Membrane    |\n",
+    "- `LC3B` -> Autophagosome marker (visible in mCherry channel)\n",
+    "- `LckLip` -> Membrane-targeted fluorescence protein for cell boundary visualization (visible in Alexa488 channel)\n",
+    "- `Hoechst` -> DNA stain for nucleus identification (visible in DAPI channel)\n",
     "\n",
-    "In addition to expressing fluorescently tagged proteins, some of the cells have had the `EI24` gene knocked out, leading to two different genotypes: `WT` (wild-type) cells and `EI24KO` (knockout) cells.\n",
-    "For each genotype, two different clonal cell lines were analyzed, with multiple fields of view (FOVs) captured per condition.\n",
+    "Each image contains three separate channels:\n",
     "\n",
-    "To enable queries on our images, we annotate them with the corresponding metadata."
+    "| Channel | Imaged Structure | Fluorescent Marker |\n",
+    "|---------|------------------|-------------------|\n",
+    "| 1       | DNA             | `Hoechst` (DAPI)    |\n",
+    "| 2       | Autophagosomes  | `LC3B` (mCherry)    |\n",
+    "| 3       | Plasma Membrane | `LckLip` (Alexa488) |\n",
+    "\n",
+    "\n",
+    "Two genotypes were analyzed:\n",
+    "- WT (Wild-type cells)\n",
+    "- EI24KO (`EI24` gene knockout cells)\n",
+    "\n",
+    "For each genotype, two different clonal cell lines were studied, with multiple fields of view (FOVs) captured per experimental condition.\n",
+    "\n",
+    "All images are annotated with corresponding metadata to enable efficient querying and analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1ec24b1",
+   "metadata": {},
+   "source": [
+    "### Define a schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6577f759",
+   "metadata": {},
+   "source": [
+    "We define a {class}`~lamindb.Schema` to curate metadata."
    ]
   },
   {
@@ -164,24 +197,26 @@
    },
    "outputs": [],
    "source": [
+    "ulabel_names = [\"genotype\", \"stimulation\", \"cell_line_clone\", \"channel\", \n",
+    "                \"FOV\", \"magnification\", \"microscope\", \"imaged structure\"]\n",
+    "\n",
     "autophagy_imaging_schema = ln.Schema(\n",
     "    name=\"Autophagy imaging schema\",\n",
     "    features=[\n",
-    "        ln.Feature(name=\"genotype\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"stimulation\", dtype=ln.ULabel.name).save(),\n",
+    "        *[ln.Feature(name=name, dtype=ln.ULabel.name).save() for name in ulabel_names],\n",
     "        ln.Feature(name=\"cell_line\", dtype=bt.CellLine.name).save(),\n",
-    "        ln.Feature(name=\"cell_line_clone\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"channel\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"FOV\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"magnification\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"microscope\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(name=\"imaged structure\", dtype=ln.ULabel.name).save(),\n",
-    "        ln.Feature(\n",
-    "            name=\"resolution\", dtype=float, description=\"conversion factor for px to µm\"\n",
-    "        ).save(),\n",
+    "        ln.Feature(name=\"resolution\", dtype=float, description=\"conversion factor for px to µm\").save(),\n",
     "    ],\n",
     "    coerce_dtype=True,\n",
     ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f485d6",
+   "metadata": {},
+   "source": [
+    "### Curate the dataset"
    ]
   },
   {
@@ -197,6 +232,7 @@
    "outputs": [],
    "source": [
     "curator = ln.curators.DataFrameCurator(metadata_files, autophagy_imaging_schema)\n",
+    "\n",
     "try:\n",
     "    curator.validate()\n",
     "except ln.core.exceptions.ValidationError as e:\n",
@@ -223,8 +259,19 @@
    "outputs": [],
    "source": [
     "curator.cat.standardize(\"cell_line\")\n",
-    "curator.cat.add_new_from(\"all\")\n",
+    "\n",
+    "for key in curator.cat.non_validated.keys():\n",
+    "    curator.cat.add_new_from(key)\n",
+    "\n",
     "curator.validate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9583edd",
+   "metadata": {},
+   "source": [
+    "### Annotate images with metadata"
    ]
   },
   {
@@ -232,7 +279,7 @@
    "id": "14",
    "metadata": {},
    "source": [
-    "Add all images to our lamindb instance to annotate all relevant metadata."
+    "We add images to our `lamindb` instance and annotate them with their metadata."
    ]
   },
   {
@@ -250,32 +297,21 @@
     "ln.Feature(name=\"study\", dtype=ln.ULabel).save()\n",
     "ln.ULabel(name=\"autophagy imaging\").save()\n",
     "\n",
-    "# loop through all Artifacts and add feature values\n",
     "artifacts = []\n",
+    "\n",
     "for _, row in metadata_files.iterrows():\n",
-    "    artifact = (\n",
-    "        ln.Artifact.using(\"scportrait/examples\")\n",
-    "        .filter(key__icontains=row[\"image_path\"])\n",
-    "        .one()\n",
-    "    )\n",
+    "    artifact = ln.Artifact.using(\"scportrait/examples\").filter(key__icontains=row[\"image_path\"]).one()\n",
     "    artifact.save()\n",
     "    artifact.cell_lines.add(bt.CellLine.filter(name=row.cell_line).one())\n",
-    "\n",
-    "    artifact.features.add_values(\n",
-    "        {\n",
-    "            \"genotype\": row.genotype,\n",
-    "            \"stimulation\": row.stimulation,\n",
-    "            \"cell_line_clone\": row.cell_line_clone,\n",
-    "            \"channel\": row.channel,\n",
-    "            \"imaged structure\": row[\"imaged structure\"],\n",
-    "            \"study\": \"autophagy imaging\",\n",
-    "            \"FOV\": row.FOV,\n",
-    "            \"magnification\": row.magnification,\n",
-    "            \"microscope\": row.microscope,\n",
-    "            \"resolution\": row.resolution,\n",
-    "        }\n",
-    "    )\n",
-    "\n",
+    "    \n",
+    "    artifact.features.add_values({\n",
+    "        col: row[col] for col in [\"genotype\", \"stimulation\", \"cell_line_clone\", \n",
+    "                                  \"channel\", \"FOV\", \"magnification\", \"microscope\", \"resolution\"]\n",
+    "    } | {\n",
+    "        \"imaged structure\": row[\"imaged structure\"],\n",
+    "        \"study\": \"autophagy imaging\"\n",
+    "    })\n",
+    "    \n",
     "    artifacts.append(artifact)"
    ]
   },
@@ -330,33 +366,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FOV_example_images = (\n",
-    "    metadata_files.sort_values(by=[\"cell_line_clone\", \"stimulation\", \"FOV\"])\n",
-    "    .head(3)\n",
-    "    .reset_index(drop=True)\n",
-    ")\n",
+    "def plot_example_images(df, n_images=3, title_prefix=\"\"):\n",
+    "    \"\"\"Plot example images from dataframe\"\"\"\n",
+    "    fig, axs = plt.subplots(1, n_images, figsize=(15, 5))\n",
+    "    if n_images == 1:\n",
+    "        axs = [axs]\n",
+    "    for idx, row in df.iterrows():\n",
+    "        path = ln.Artifact.using(\"scportrait/examples\").get(key=row[\"image_path\"]).cache()\n",
+    "        image = imread(path)\n",
+    "        axs[idx].imshow(image)\n",
+    "        axs[idx].set_title(f\"{title_prefix}{row['imaged structure']}\")\n",
+    "        axs[idx].axis(\"off\")\n",
+    "    return fig, axs\n",
     "\n",
-    "fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
-    "for idx, row in FOV_example_images.iterrows():\n",
-    "    path = ln.Artifact.using(\"scportrait/examples\").get(key=row[\"image_path\"]).cache()\n",
-    "    image = imread(path)\n",
-    "    axs[idx].imshow(image)\n",
-    "    axs[idx].set_title(f\"{row['imaged structure']}\")\n",
-    "    axs[idx].axis(\"off\")\n",
+    "sorted_metadata = metadata_files.sort_values(by=[\"cell_line_clone\", \"stimulation\", \"FOV\"])\n",
     "\n",
-    "FOV_example_images = (\n",
-    "    metadata_files.sort_values(by=[\"cell_line_clone\", \"stimulation\", \"FOV\"])\n",
-    "    .tail(3)\n",
-    "    .reset_index(drop=True)\n",
-    ")\n",
-    "\n",
-    "fig, axs = plt.subplots(1, 3, figsize=(15, 5))\n",
-    "for idx, row in FOV_example_images.iterrows():\n",
-    "    path = ln.Artifact.using(\"scportrait/examples\").get(key=row[\"image_path\"]).cache()\n",
-    "    image = imread(path)\n",
-    "    axs[idx].imshow(image)\n",
-    "    axs[idx].set_title(f\"{row['imaged structure']}\")\n",
-    "    axs[idx].axis(\"off\")"
+    "# Plot first 3 and last 3\n",
+    "plot_example_images(sorted_metadata.head(3).reset_index(drop=True));\n",
+    "plot_example_images(sorted_metadata.tail(3).reset_index(drop=True));"
    ]
   },
   {
